# cyclope-central

./: .env.development.example  .env.example  .env.production.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_foundation.py  0002_agent_enrollment.py  0003_endpoint_inventory.py  0004_alerts.py  0005_agent_jobs.py  0006_notifications.py  0007_auth_rbac.py  0008_rustdesk_remote_access.py  0009_msp_operations_phase2.py  0010_production_readiness_phase3.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  agent.py  alerts.py  auth.py  bootstrap.py  dashboard.py  devices.py  inventory.py  jobs.py  notifications.py  operations.py  phase3.py  remote.py  schemas.py  users.py
backend/app/core/: alerts.py  bootstrap.py  config.py  enrollment.py  jobs.py  logging.py  notifications.py  security.py  token_hashing.py
backend/app/db/: base.py  session.py
backend/app/models/: agent.py  agent_job.py  agent_job_event.py  agent_job_result.py  alert.py  alert_event.py  alert_rule.py  audit_log.py  device.py  device_checkin.py  device_inventory.py  disk_inventory.py  enrollment_token.py  installed_software.py  mixins.py  network_interface_inventory.py  notification_channel.py  notification_delivery.py  notification_rule.py  organization.py  phase2.py  phase3.py  refresh_token.py  remote_device_link.py  remote_provider_config.py  remote_session_audit.py  security_status.py  user.py  (+1 more)
backend/tests/: test_agent_enrollment.py
(+65 files in other folders)
